Updated some html structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>Personal Portfolio Website</title>
 </head>
 <body>
@@ -13,10 +14,9 @@
 
         <nav class="navbar">
             <a href="#" class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Service</a>
+            <a href="#">Education</a>
+            <a href="#">Services</a>
             <a href="#">Portfolio</a>
-            <a href="#">Contact</a> 
         </nav>
     </header>
 
