updated html structure

--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Lungiswa</a>
+        <a href="#" class="logo">Lungiswa.</a>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
 
         <nav class="navbar">
             <a href="#" class="active">Home</a>
+            <a href="#">About</a>
             <a href="#">Education</a>
-            <a href="#">Services</a>
-            <a href="#">Portfolio</a>
+            <a href="#">Skills</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
-    <section class="home">
+    <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, I'm Lungiswa Mgeyi</h1>
+            <h1>Hi, I'm <span>Lungiswa Mgeyi</span></h1>
+            <div>
             <h3>Frontend Developer</h3>
+            </div>
             <p>Hello! I'm Lungiswa, a passionate front-end developer with a keen interest in crafting beautiful and functional web experiences. With a solid foundation in HTML, CSS, JavaScript, along with certification from SheCodes and Free Code Camp. I am enthusiastic about creating user-friendly interfaces that leave a lasting impression. </p>
             <div class="btn-box">
-                <a href="#">Hire Me</a>
-                <a href="#">Let's Talk</a>
+                <a href="#" class="btn">Hire Me</a>
+                <a href="#" class="btn">Let's Talk</a>
             </div>
         </div>
 
@@ -36,6 +41,22 @@
             <a href="#"><i class="bx bxl-twitter"></i></a>
             <a href="#"><i class="bx bxl-linkedin"></i></a>
         </div>
+
+        <div class="home-imgHover"></div>
     </section>
+    
+    </section>
+
+
+          <footer class="footer">
+            <div class="footer-text">
+                <p>Copyright &copy; by Lungiswa Mgeyi | All Rights Reserved.</p>
+            </div>
+
+            <div class="footer-iconTop">
+                <a href=""><i class='bx bx-up-arrow-alt'></i></a>
+            </div>
+          </footer>
+    <script src="src/index.js"></script>
 </body>
 </html>
